[FIX] mail: livechat action hover style matches header color
Chat window action mouse hover effect was hardcoded for white and
dark theme.

In livechat, the header color can be customised. With the default
colors (purple background and white text), the hover effect had
white background, which made the action not visible.

This commit fixes the issue by using a slight color invert when
mouse hovering the action of a chat window, so that the color is
slightly different from header color while keeping icon color
distinguishable.

--- a/addons/mail/static/src/core/common/chat_window.scss
+++ b/addons/mail/static/src/core/common/chat_window.scss
@@ -18,7 +18,7 @@
         padding: map-get($spacers, 1) / 2;
     }
     &:hover:not(.o-actionsMenu), &.o-active, &.o-hover {
-        background-color: var(--mail-ChatWindow-commandHoverBg, mix($gray-100, $gray-200));
+        backdrop-filter: invert(.15);
         border-color: transparent !important;
     }
     &:not(.o-active):not(.o-hover) .fa-caret-down {
